MarcoKitTests/TestData/error/array2.marco
--before
[t

--after
1-2: 'true' expected
